--- a/app/src/main/res/layout/activity_football_club_detail.xml
+++ b/app/src/main/res/layout/activity_football_club_detail.xml
@@ -5,6 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".FootballClubDetailActivity">
+        tools:context=".activities.FootballClubDetailActivity">
 
 </android.support.constraint.ConstraintLayout>
