--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="img_width">50dp</dimen>
     <dimen name="img_height">50dp</dimen>
     <dimen name="margin_textview">10dp</dimen>
+    <dimen name="margin_team_name">15dp</dimen>
 </resources>
