--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,47 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+
+    <style name="TextAppearanceInfo">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="TextAppearanceInfo.Home" parent="TextAppearanceInfo">
+        <item name="android:layout_marginEnd">@dimen/generic_margin_top</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="TextAppearanceInfo.Away" parent="TextAppearanceInfo">
+        <item name="android:layout_marginStart">@dimen/generic_margin_top</item>
+        <item name="android:gravity">end</item>
+    </style>
+
+    <style name="TextAppearanceList" parent="TextAppearanceInfo">
+        <item name="android:maxLines">2</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="TextAppearanceList.Home" parent="TextAppearanceList">
+        <item name="android:layout_marginEnd">@dimen/generic_margin_top</item>
+    </style>
+
+    <style name="TextAppearanceList.Away" parent="TextAppearanceList">
+        <item name="android:layout_marginStart">@dimen/generic_margin_top</item>
+    </style>
+
+    <style name="TextAppearanceInfo.HomeScore" parent="TextAppearanceInfo">
+        <item name="android:layout_marginEnd">@dimen/generic_margin_top</item>
+    </style>
+
+    <style name="TextAppearanceInfo.AwayScore" parent="TextAppearanceInfo">
+        <item name="android:layout_marginStart">@dimen/generic_margin_top</item>
+    </style>
+
 </resources>
