--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,26 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.main.MainActivity">
+        tools:context=".ui.activities.main.view.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+            android:id="@+id/main_tab_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:background="@color/colorPrimary"
+            android:paddingTop="@dimen/generic_margin_top"
+            android:paddingBottom="@dimen/generic_margin_bottom"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"
+    />
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/main_vp_match_list"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/zero"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/main_tab_layout">
+
+    </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
