--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,15 @@
     <dimen name="img_height">50dp</dimen>
     <dimen name="margin_textview">10dp</dimen>
     <dimen name="margin_team_name">15dp</dimen>
+    <dimen name="zero">0dp</dimen>
+    <dimen name="distance_each_card">16dp</dimen>
+    <dimen name="generic_margin_top">8dp</dimen>
+    <dimen name="generic_margin_bottom">8dp</dimen>
+    <dimen name="text_size_date">14sp</dimen>
+    <dimen name="generic_card_elevation">8dp</dimen>
+    <dimen name="margin_club_name">32dp</dimen>
+    <dimen name="text_size_club_name">14sp</dimen>
+    <dimen name="text_size_score">32sp</dimen>
+    <dimen name="text_width_club_name">100dp</dimen>
+    <dimen name="separator_height">4dp</dimen>
 </resources>
