--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,24 @@
         android:layout_height="match_parent"
         tools:context=".ui.activities.main.view.MainActivity">
 
-    <android.support.design.widget.TabLayout
-            android:id="@+id/main_tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:paddingTop="@dimen/generic_margin_top"
-            android:paddingBottom="@dimen/generic_margin_bottom"
-            app:tabTextColor="@android:color/white"
-            app:tabSelectedTextColor="@android:color/white"
-    />
-
-    <android.support.v4.view.ViewPager
-            android:id="@+id/main_vp_match_list"
+    <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/zero"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/main_tab_layout">
+            android:id="@+id/main_fragment_container"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
 
-    </android.support.v4.view.ViewPager>
+    <android.support.design.widget.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_bottom_navigation"
+            app:itemBackground="@android:color/white"
+            app:menu="@menu/bottom_navigation_menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
 
 </android.support.constraint.ConstraintLayout>
