--- a/app/src/main/res/layout/fragment_match_list.xml
+++ b/app/src/main/res/layout/fragment_match_list.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".ui.fragments.matchList.view.MatchListFragment">
+        tools:context=".ui.fragments.matchlist.view.MatchListFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/match_list_srl"
