--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,23 @@
         android:layout_height="match_parent"
         tools:context=".ui.activities.main.view.MainActivity">
 
+    <android.support.design.widget.TabLayout
+            android:id="@+id/main_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:tabTextColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"
+    />
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/main_vp_matches"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/zero"
+            app:layout_constraintTop_toBottomOf="@id/main_tab_layout"
+            app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation"
+    />
+
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/zero"
@@ -16,12 +33,13 @@
             app:layout_constraintBottom_toTopOf="@id/main_bottom_navigation"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@android:color/white"
     />
 
     <android.support.design.widget.BottomNavigationView
+            android:id="@+id/main_bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/main_bottom_navigation"
             app:itemBackground="@android:color/white"
             app:menu="@menu/bottom_navigation_menu"
             app:layout_constraintBottom_toBottomOf="parent"
