--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,15 +5,15 @@
 -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/prev_match"
+    <item android:id="@+id/matches"
           android:enabled="true"
-          android:title="@string/prev_match_bnm"
+          android:title="@string/text_matches_bnm"
           android:icon="@drawable/ic_prev_match_black_24dp"
           app:showAsAction="ifRoom" />
-    <item android:id="@+id/next_match"
+    <item android:id="@+id/teams"
           android:enabled="true"
-          android:title="@string/next_match_bnm"
-          android:icon="@drawable/ic_next_match_black_24dp"
+          android:title="@string/text_matches_bnm"
+          android:icon="@drawable/ic_star_black_24dp"
           app:showAsAction="ifRoom" />
     <item android:id="@+id/favorites"
           android:enabled="true"
