--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="text_size_score">32sp</dimen>
     <dimen name="text_width_club_name">100dp</dimen>
     <dimen name="separator_height">4dp</dimen>
+    <dimen name="margin_tb_sp_parent_any_teams">10dp</dimen>
 </resources>
