--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -4,7 +4,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context=".ui.fragments.teams.view.TeamsFragment">
+        tools:context=".ui.fragments.teams.view.TeamsFragment"
+        android:padding="@dimen/padding_all_parent_list_item_team"
+>
 
     <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/teams_spinner"
@@ -24,6 +26,16 @@
             android:layout_marginTop="@dimen/margin_tb_sp_parent_any_teams"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+    />
+
+    <ProgressBar
+            android:id="@+id/teams_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
     />
 
