--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,8 +12,8 @@
           app:showAsAction="ifRoom" />
     <item android:id="@+id/teams"
           android:enabled="true"
-          android:title="@string/text_matches_bnm"
-          android:icon="@drawable/ic_star_black_24dp"
+          android:title="@string/text_teams_bnm"
+          android:icon="@drawable/ic_supervisor_account_black_24dp"
           app:showAsAction="ifRoom" />
     <item android:id="@+id/favorites"
           android:enabled="true"
