--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -1,54 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.activities.teamdetail.view.TeamDetailActivity">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	tools:context=".ui.activities.teamdetail.view.TeamDetailActivity">
 
-    <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+	<android.support.design.widget.AppBarLayout
+		android:id="@+id/team_detail_layout_appbar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:fitsSystemWindows="true"
+		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+		>
 
-        <android.support.design.widget.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+		<android.support.design.widget.CollapsingToolbarLayout
+			android:id="@+id/team_detail_layout_collapsing_toolbar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:fitsSystemWindows="true"
+			app:contentScrim="?attr/colorPrimary"
+			app:layout_scrollFlags="scroll|exitUntilCollapsed"
+			app:titleEnabled="false"
+			>
 
-            <include layout="@layout/include_collapsable_team_detail"
-                android:id="@+id/include_collapsable_team_detail_container"
-                />
+			<include
+				android:id="@+id/include_collapsable_team_detail_container"
+				layout="@layout/include_collapsable_team_detail"
+				app:layout_collapseMode="parallax" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/collapsable_team_detail_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                app:layout_scrollFlags="scroll|enterAlways"
-                />
+			<android.support.v7.widget.Toolbar
+				android:id="@+id/collapsable_team_detail_toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="?actionBarSize"
+				android:minHeight="?actionBarSize"
+				app:layout_collapseMode="pin"
+				app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+		</android.support.design.widget.CollapsingToolbarLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/team_detail_tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:tabGravity="fill"
-            app:tabMode="scrollable"
-            android:background="@color/colorPrimary"
-            />
+		<android.support.design.widget.TabLayout
+			android:id="@+id/team_detail_tab_layout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:background="@color/colorPrimary"
+			app:tabGravity="fill"
+			app:tabSelectedTextColor="@android:color/white"
+			app:tabTextColor="@android:color/white" />
 
-    </android.support.design.widget.AppBarLayout>
+	</android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/team_detail_nsv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+	<android.support.v4.widget.NestedScrollView
+		android:id="@+id/team_detail_nsv"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:fillViewport="true"
+		app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/include_content_team_detail"
-            android:id="@+id/include_content_team_detail_container" />
+		<!--<include-->
+		<!--android:id="@+id/include_content_team_detail_container"-->
+		<!--layout="@layout/include_content_team_detail" />-->
 
-    </android.support.v4.widget.NestedScrollView>
+		<android.support.v4.view.ViewPager
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/include_content_team_detail_view_pager"
+		/>
+
+		<!--<TextView-->
+			<!--android:layout_width="match_parent"-->
+			<!--android:layout_height="wrap_content"-->
+			<!--android:text="@string/dummy_lorem"-->
+			<!--android:textSize="30sp" />-->
+
+	</android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
