--- a/app/src/main/res/layout/fragment_team_description.xml
+++ b/app/src/main/res/layout/fragment_team_description.xml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/team_description_nsv"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	tools:context=".ui.fragments.teamdescription.view.TeamDescriptionFragment">
 
-	<!-- TODO: Update blank fragment layout -->
-	<TextView
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment" />
+		android:layout_height="wrap_content"
+		android:orientation="vertical">
 
-</FrameLayout>
+		<TextView
+			android:id="@+id/team_description_tv_team_description"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_top_tv_tv_collapsable_info"
+			tools:text="@string/dummy_lorem" />
+
+		<ImageView
+			android:id="@+id/team_description_img_stadium"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/height_img_stadium_team_description"
+			android:layout_marginTop="@dimen/margin_top_tv_tv_collapsable_info"
+			android:contentDescription="@string/image_stadium"
+			android:src="@drawable/ic_launcher_background" />
+
+		<TextView
+			android:id="@+id/team_description_tv_stadium"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			android:gravity="center"
+			tools:text="@string/dummy_stadium" />
+
+		<TextView
+			android:id="@+id/team_description_tv_stadium_desc"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_top_tv_tv_collapsable_info"
+			tools:text="@string/dummy_lorem" />
+
+	</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
