--- a/app/src/main/res/layout/include_content_team_detail.xml
+++ b/app/src/main/res/layout/include_content_team_detail.xml
@@ -6,10 +6,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent" android:layout_height="match_parent">
 
-	<android.support.v4.view.ViewPager
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/include_content_team_detail_view_pager"
-		/>
+	<!--<android.support.v4.view.ViewPager-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--android:id="@+id/include_content_team_detail_view_pager"-->
+		<!--/>-->
 
 </android.support.constraint.ConstraintLayout>
